syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 value = 2;
  bool alive = 3;
  RequestedFeature requested_feature = 4;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int32 value = 2;
  bool alive = 3;
}

enum RequestedFeature {
  REQUESTED_FEATURE_INVALID = 0;
  REQUESTED_FEATURE_ONE = 1;
  REQUESTED_FEATURE_TWO = 2;
}
